fix mongodb connection

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb://localhost:27017/giftshop
+MONGO_URI=mongodb+srv://sparklegiftshop7_db_user:Dina0831@sparklegiftshop.u7tymz8.mongodb.net/giftshop
 WHATSAPP_NUMBER=919876543210
